# akribes-sdks

./: README.md
crates/akribes-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/akribes-sdk/examples/: document_upload.rs  quick_start.rs  smoke.rs  subscribe_first.rs
crates/akribes-sdk/src/: client.rs  error.rs  events.rs  lib.rs  models.rs  runtime.rs  suspend.rs  task_end.rs  token_safety.rs
crates/akribes-sdk/src/sub/: bench.rs  channels.rs  clients.rs  convert.rs  documents.rs  drafts.rs  evals.rs  events.rs  executions.rs  mcp.rs  mod.rs  projects.rs  run_stream.rs  scripts.rs  tokens.rs  versions.rs
crates/akribes-types/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/akribes-types/src/: ast.rs  error.rs  event.rs  lib.rs  value.rs
